[package]
name = "p_var"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "p_var"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
